src/objects/Attribute__c.object
<CustomObject>
    <description>Knowledge: this object is used to store Car Attribute</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <label>Attribute Category</label>
        <picklist>
            <picklistValues>
                <fullName>基本参数</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>扩展参数</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>价格</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>发动机和性能</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>燃油消耗</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>地盘和车轮</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>尺寸和重量</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Car Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Category__c</columns>
        <columns>Attribute_Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Car Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Attribute</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>